crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@68.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('hunspell_num', 'ballyklubber');"
---
SelectStmt@0..49
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..47
    FuncCall@7..47
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..31
        Sconst@17..31 "'hunspell_num'"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..47
        Sconst@33..47 "'ballyklubber'"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

