crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@69.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('hunspell_num', 'footballyklubber');"
---
SelectStmt@0..53
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..51
    FuncCall@7..51
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..31
        Sconst@17..31 "'hunspell_num'"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..51
        Sconst@33..51 "'footballyklubber'"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

