crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@78.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('synonym', 'Gogle');"
---
SelectStmt@0..37
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..35
    FuncCall@7..35
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..26
        Sconst@17..26 "'synonym'"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..35
        Sconst@28..35 "'Gogle'"
  Ascii41@35..36 ")"
  Ascii59@36..37 ";"

