crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@79.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('synonym', 'indices');"
---
SelectStmt@0..39
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..37
    FuncCall@7..37
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..26
        Sconst@17..26 "'synonym'"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..37
        Sconst@28..37 "'indices'"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

